Read me.